--- a/views/orderSuccess.handlebars
+++ b/views/orderSuccess.handlebars
@@ -16,7 +16,8 @@
 		
 			<h1 align="center"> Message sent!</h1>
 			<img class="img-responsive center-block" src=/success.jpg alt="User profile picture">
-			<h4 align="center">Go to products tab to purchase more!</h4>
+			<h4 align="center">Please check your email for verification!!!</h4>
+      <h4 align="center">Go to products tab to purchase more!</h4>
         </div>
         
 		<!-- /.box-body -->
