--- a/views/orderSuccess.handlebars
+++ b/views/orderSuccess.handlebars
@@ -3,17 +3,15 @@
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
-              <h2 class="section-heading mb-4">
+              
                 
 
-                  //code for printing brands
+                 <p>ORDER SUCCESS</p>
+                 <p>PLEASE CHECK YOUR EMAIL!!!</p>
 
 
 
-                   </div>
-                  </div>
-                  </div>
-                </section>
+                   
             </div>
           </div>
         </div>
