grid type view for products

--- a/views/brands.handlebars
+++ b/views/brands.handlebars
@@ -5,7 +5,7 @@
             <div class="text-center rounded">
               <div class="box-header with-border">
               <h3 class="box-title">Brand List</h3>
-        <span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createbrand';" ">Create Brand</span>
+       
             </div>
 
              <div class="box-body">
@@ -20,5 +20,8 @@
             </div>
           </div>
         </div>
+        <div class="box-header with-border" align="center">
+         <span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createbrand';" ">Create Brand</span>
+         </div>
   </div>
 </section>
