--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -15,7 +15,7 @@
 		<div class="box box-success">
             <div class="box-header with-border">
               <h3 class="box-title">Categories List</h3>
-			  <span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createcategory';" ">Create Category</span>
+			  
             </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -32,7 +32,13 @@
             </div>
           </div>
         </div>
+
+        <div class="box-header with-border" align="center">
+<span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createcategory';" ">Create Category</span>
+</div>
+
   </div>
+
 </section>
 
   
