--- a/views/createProduct.handlebars
+++ b/views/createProduct.handlebars
@@ -21,7 +21,7 @@
                 </div>
         <div class="form-group">
                   <label>Product Description</label>
-                  <input name="description" type="text" class="form-control" placeholder="optional">
+                  <textarea class="form-control" rows="5" id="comment" placeholder="Enter..."></textarea>
                 </div>
         <div class="form-group">
                   <label>Product Tagline</label>
