--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,7 +9,7 @@
               </h2>
                   <section class="page-section clearfix">
                     <div class="container>
-                    <span class="section-heading-lower">Worth Driving</span>                     
+                    <span class="section-heading-lower"><h4>Worth Driving</h4></span>                     
                         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" align="center" src="assets/img/intro.jpg" alt="">
                     
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
