--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
     <link href="/assets/css/business-casual.min.css" rel="stylesheet">
 
   </head>
-
+ 
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
@@ -39,9 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/">Home
-                <span class="sr-only">(current)</span>
-              </a>
+              <a class="nav-link text-uppercase text-expanded" href="/">Home</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/productslist">Products</a>
@@ -64,7 +62,7 @@
           {{{body}}}
        
 
-    <footer class="footer text-faded text-center py-5" >
+    <footer class="footer text-faded text-center py-5">
       <div class="container">
         <p class="m-0 small">Team 18 CAR SHOP : Your best Driving Experience</p>
       </div>
@@ -77,5 +75,4 @@
   </body>
 
 </html>
-
 
