--- a/views/createBrand.handlebars
+++ b/views/createBrand.handlebars
@@ -20,7 +20,8 @@
                 </div>
         <div class="form-group">
                   <label>Brand Description</label>
-                  <input name="description" type="text" class="form-control" placeholder="Enter ..." required="required">
+                   <textarea class="form-control" rows="5" id="comment" placeholder="Enter..."></textarea>
+                 <!-- <input name="description" type="text" class="form-control" placeholder="Enter ..." required="required">-->
                 </div>
         <div class="form-group">
            <button type="submit" class="btn bg-purple margin">Send</button>
