--- a/views/productupdate.handlebars
+++ b/views/productupdate.handlebars
@@ -23,7 +23,13 @@
                 </div>
 				<div class="form-group">
                   <label>Product Description</label>
-                  <input name="description" type="text" class="form-control" placeholder="optional" value="{{prod_desc}}">
+                  
+
+                  <textarea name="description" class="form-control" rows="5" placeholder="{{prod_desc}}" value="{{prod_desc}}"></textarea>
+
+                <!-- <input name="description" type="textarea" rows=5 class="form-control" placeholder="{{prod_desc}}" value="{{prod_desc}}"> -->
+                 
+
                 </div>
 				<div class="form-group">
                   <label>Product Tagline</label>
