--- a/views/admin/brands.handlebars
+++ b/views/admin/brands.handlebars
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="box-header with-border" align="center">
-         <span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createbrand';" ">Create Brand</span>
+         <span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='createbrand';" ">Create Brand</span>
          </div>
   </div>
 </section>
