--- a/views/admin/categories.handlebars
+++ b/views/admin/categories.handlebars
@@ -34,7 +34,7 @@
         </div>
 
         <div class="box-header with-border" align="center">
-<span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='/createcategory';" ">Create Category</span>
+<span class="btn btn-sm btn-primary pull-right" id="addUserbtn" style="margin-right:5px" onclick="location.href='createcategory';" ">Create Category</span>
 </div>
 
   </div>
