--- a/views/admin/createBrand.handlebars
+++ b/views/admin/createBrand.handlebars
@@ -12,7 +12,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <form role="form" method="post" action="/brand/submit">
+              <form role="form" method="post" action="brand/submit">
                 <!-- text input -->
                 <div class="form-group">
                   <label>Brand Name</label>
