--- a/views/admin/customers.handlebars
+++ b/views/admin/customers.handlebars
@@ -20,7 +20,7 @@
                 <tr>
                    
                   <td>{{this.first_name}} {{this.last_name}}</td>
-                  <td><span class="btn btn-sm btn-primary pull-left" id="addUserbtn" style="margin-right:5px" onclick="location.href='/customer/{{this.customer_id}}';" >View Details</span></td>
+                  <td><span class="btn btn-sm btn-primary pull-left" id="addUserbtn" style="margin-right:5px" onclick="location.href='customer/{{this.customer_id}}';" >View Details</span></td>
                   
                 </tr>
         {{/each}}
