--- a/views/admin/productupdate.handlebars
+++ b/views/admin/productupdate.handlebars
@@ -15,7 +15,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <form role="form" method="post" action="/product/updatesubmit/{{prod_id}}">
+              <form role="form" method="post" action="/admin/product/updatesubmit/{{prod_id}}">
                 <!-- text input -->
                 <div class="form-group">
                   <label>Product Name</label>
