--- a/views/layouts/admin.handlebars
+++ b/views/layouts/admin.handlebars
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item active px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="/admin">Home</a>
+              <a class="nav-link text-uppercase text-expanded" href="/admin">Dashboard</a>
             </li>
             <li class="nav-item px-lg-4">
               <a class="nav-link text-uppercase text-expanded" href="/admin/product">Products</a>
