--- a/views/admin/createCategory.handlebars
+++ b/views/admin/createCategory.handlebars
@@ -12,7 +12,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <form role="form" method="post" action="/category/submit">
+              <form role="form" method="post" action="category/submit">
                 <!-- text input -->
                 <div class="form-group">
                   <label>Category Name</label>
