--- a/views/client/productView.handlebars
+++ b/views/client/productView.handlebars
@@ -48,7 +48,7 @@
         </div>
     
    <div class="box-body">
-              <form role="form" method="post" action="/send-email/{{prod_id}}">
+              <form role="form" method="post" action="/client/send-email/{{prod_id}}">
                 <!-- text input -->
         <div class="form-group">
                   <label>Product Id</label>
