--- a/views/admin/createProduct.handlebars
+++ b/views/admin/createProduct.handlebars
@@ -13,7 +13,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <form role="form" method="post" action="/product/submit">
+              <form role="form" method="post" action="/admin/product/submit">
                 <!-- text input -->
                 <div class="form-group">
                   <label>Product Name</label>
