--- a/views/admin/home.handlebars
+++ b/views/admin/home.handlebars
@@ -1,26 +1,125 @@
-    <section class="page-section cta">
-      <div class="container">
+  <section class="page-section cta">
+  <div class="container">
         <div class="row">
           <div class="col-xl-9 mx-auto">
             <div class="text-center rounded">
-              <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Our Promise</span>
-                <span class="section-heading-lower">To You</span>
+                 <h2 class="section-heading mb-4">
+                <span class="section-heading-upper">ADMINISTRATOR</span>
+                <span class="section-heading-lower">WELCOME TO DASHBOARD</span>
               </h2>
-                  <section class="page-section clearfix">
-                    <div class="container>
-                    <span class="section-heading-lower"><h4>Worth Driving</h4></span>                     
-                        <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" align="center" src="assets/img/intro.jpg" alt="">
-                    
-                    <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-                        <div class="intro-button mx-auto">
-                      <a class="btn btn-primary btn-xl" href="/productView">Visit Us Today!</a>
-                   </div>
-                  </div>
-                  </div>
-                </section>
+
+                <div class="box box-success">
+            <div class="box-header with-border">
+            </div>
+            
+            <!-- /.box-header -->
+            <div class="box-body no-padding">
+              <table class="table table-striped">
+               <h3>Top 10 customers with most numbers of Orders</h3>
+                <tr>   
+                  <th>Customer Name</th>
+                  <th>Number of Orders</th>
+                </tr>
+
+               {{#each data}}
+                   <tr>
+                  <td>{{this.first_name}} {{this.last_name}}</td>
+                  <td>{{this.num_orders}}</td>
+                  </tr>
+                {{/each}}
+
+              </table>
+
+              <table class="table table-striped">
+               <h3>Top 10 customers with Highest Payment</h3>
+                <tr>   
+                  <th>Customer Name</th>
+                  <th>Total Payment</th>
+                </tr>
+
+               {{#each data2}}
+                   <tr>
+                  <td>{{this.first_name}} {{this.last_name}}</td>
+                  <td>{{this.totalprice}} PHP</td>
+                  </tr>
+                {{/each}}
+
+              </table>
+
+              <table class="table table-striped">
+              <h3>Top 10 Most Ordered Products</h3>
+
+                <tr>   
+                  <th>Products Name</th>
+                  <th>Number of Orders</th>
+                </tr>
+
+               {{#each data3}}
+                   <tr>
+                  <td>{{this.name}}</td>
+                  <td>{{this.num_orders}}</td>
+                  </tr>
+                {{/each}}    
+              
+              </table>
+
+                <!---TOP 5---->
+
+               <table class="table table-striped">
+              <h3>Top 10 Least Ordered Products</h3>
+
+                <tr>   
+                  <th>Products Name</th>
+                  <th>Number of Orders</th>
+                </tr>
+
+               {{#each data4}}
+                   <tr>
+                  <td>{{this.name}}</td>
+                  <td>{{this.num_orders}}</td>
+                  </tr>
+                {{/each}}    
+              
+              </table>
+      
+
+               <table class="table table-striped">
+              <h3>Top 3 Most Ordered Brands</h3>
+
+                <tr>   
+                  <th>Products Name</th>
+                  <th>Number of Orders</th>
+                </tr>
+
+               {{#each data5}}
+                   <tr>
+                  <td>{{this.name}}</td>
+                  <td>{{this.num_orders}}</td>
+                  </tr>
+                {{/each}}    
+              
+              </table>
+      
+
+       <table class="table table-striped">
+              <h3>Top 3 Most Ordered Categories</h3>
+
+                <tr>   
+                  <th>Products Name</th>
+                  <th>Number of Orders</th>
+                </tr>
+
+               {{#each data6}}
+                   <tr>
+                  <td>{{this.name}}</td>
+                  <td>{{this.num_orders}}</td>
+                  </tr>
+                {{/each}}    
+              
+              </table>
+                 
             </div>
           </div>
         </div>
-      </div>
-    </section>
+  </div>
+</section>
