--- a/views/admin/createBrand.handlebars
+++ b/views/admin/createBrand.handlebars
@@ -20,10 +20,8 @@
                 </div>
         <div class="form-group">
                   <label>Brand Description</label>
-                   <textarea class="form-control" rows="5" id="comment" placeholder="Enter..."></textarea>
-                 <!-- <input name="description" type="text" class="form-control" placeholder="Enter ..." required="required">-->
+                   <textarea class="form-control" name="description" rows="5" id="comment" placeholder="Enter..."></textarea>
                 </div>
-        <div class="form-group">
            <button type="submit" class="btn bg-purple margin">Send</button>
                 </div>
         
