--- a/views/admin/createProduct.handlebars
+++ b/views/admin/createProduct.handlebars
@@ -21,7 +21,7 @@
                 </div>
         <div class="form-group">
                   <label>Product Description</label>
-                  <textarea class="form-control" rows="5" id="comment" placeholder="Enter..."></textarea>
+                  <textarea class="form-control" name="description" rows="5" id="comment" placeholder="Enter..."></textarea>
                 </div>
         <div class="form-group">
                   <label>Product Tagline</label>
