--- a/views/admin/error.handlebars
+++ b/views/admin/error.handlebars
@@ -1,28 +1,25 @@
-<div class="content-wrapper" background="./Profile Page of Benz_files/grid.gif">
-    <!-- Content Header (Page header) -->
-    <section class="content-header">
-      <h1>
-        Error Page
-      </h1>
-    </section>
-
-    <!-- Main content -->
-    <section class="content">
-
-      <!-- Default box -->
-      <div class="box">
-       
-        <div class="box-body">
-		
-			<h1 align="center"> MESSAGE NOT SENT! </h1>
-			<img class="img-responsive center-block" src=/error.jpg alt="Error">
-			<h4 align="center">Please try again later</h4>
+<section class="page-section cta">
+  <div class="container center">
+        <div class="row">
+          <div class="col-xl-9 mx-auto">
+            <div class="text-center rounded">
+              
+                <div class="box">
+        <div class="box-header with-border">
+          <h2 class="box-title">Error</h2>
+      
         </div>
-        
-		<!-- /.box-body -->
-         </div>
-      <!-- /.box -->
+        <div class="box-body" align="center">
 
-    </section>
-    <!-- /.content -->
+
+        <div class="box-body">
+    
+      <h1 align="center"> MESSAGE NOT SENT! </h1>
+      <img class="img-responsive center-block" src=/error.jpg alt="Error">
+      <h4 align="center">Please try again later</h4>
+        </div>
+
   </div>
+  </div>
+</section>
+
