--- a/views/admin/categories.handlebars
+++ b/views/admin/categories.handlebars
@@ -14,7 +14,7 @@
             <!-- /.box-header -->
             <div class="box-body">
 
-        {{#each data}}
+        {{#each category}}
         <br>
         <li type="none">{{this.name}}</li>
         {{/each}}
