--- a/views/admin/product.handlebars
+++ b/views/admin/product.handlebars
@@ -34,7 +34,7 @@
 
   <tbody>
 
- {{#each data}}
+ {{#each product}}
 
     <tr>
      <td><div class="grid"> <img src="{{this.picture}}" class="img-fluid"></div></td>
