--- a/views/client/categories.handlebars
+++ b/views/client/categories.handlebars
@@ -20,7 +20,7 @@
             <!-- /.box-header -->
             <div class="box-body">
               <ul>
-			  {{#each data}}
+			  {{#each category}}
 			  <li type="none">{{this.name}}</li>
 			  {{/each}}
 			  
