--- a/views/client/product.handlebars
+++ b/views/client/product.handlebars
@@ -30,7 +30,7 @@
 
              
     <div class="row ">
-     {{#each data}}
+     {{#each product}}
                  
                  
       <div class="col-sm-6" background="color:red">
