--- a/views/admin/brands.handlebars
+++ b/views/admin/brands.handlebars
@@ -9,7 +9,7 @@
             </div>
 
              <div class="box-body">
-                   {{#each data}}
+                   {{#each brands}}
                    <br>
               <li type="none">{{this.name}}</li>
               
