--- a/views/client/brands.handlebars
+++ b/views/client/brands.handlebars
@@ -9,7 +9,7 @@
             </div>
 
              <div class="box-body">
-                   {{#each data}}
+                   {{#each brands}}
               <li type="none">{{this.name}}</li>
               <ul>
                   <li type="none">{{this.description}}</li>
